# nx_ase

./: README.md  pyproject.toml
nx_ase/: __init__.py  fragment.py  molecule.py  path.py  scalar_field.py  trajectory.py
tests/: conftest.py  test_molecule.py  test_motor.py  test_path.py  test_scalar_field.py  test_trajectory.py
tests/data/: mpf_motor.xyz
