[tool.poetry]
name = "nx-ase"
version = "0.1.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"
packages = [{include = "nx_ase"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.4.2"
ase = "^3.24.0"
numpy = "^2.2.3"
pandas = "^2.2.3"
pyperclip = "^1.9.0"
pyvista = "^0.44.2"
ipython = "^8.32.0"
rdkit = "^2024.9.5"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
