[tool.poetry]
name = "nx-ase"
version = "0.1.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"
packages = [{include = "nx_ase"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
ase = "^3.22.1"
numpy = "^1.0"
pandas = "^2.1.0"
pyperclip = "^1.8.2"
pyvista = "^0.38.5"
ipython = "^8.15.0"
rdkit = "^2023.3.3"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
